--- a/logseq/bak/pages/DPM/2022-10-30T17_29_29.270Z.android.md
+++ b/logseq/bak/pages/DPM/2022-10-30T17_29_29.270Z.android.md
@@ -1,7 +1,7 @@
 - [DPM-Solver: A Fast ODE Solver for Diffusion Probabilistic Model Sampling in Around 10 Steps](https://arxiv.org/abs/2206.00927)
 - [Denoising Diffusion Probabilistic Models](https://arxiv.org/abs/2006.11239)
-- [[Score-Based Generative Modeling through Stochastic Differential Equations]]
-- [[Elucidating the Design Space of Diffusion-Based Generative Models]]
+- [Score-Based Generative Modeling through Stochastic Differential Equations](https://openreview.net/forum?id=PxTIG12RRHS)
+- [Elucidating the Design Space of Diffusion-Based Generative Models](https://arxiv.org/abs/2206.00364)
 - Diffusion Models/Score-based Models
 - Text Generation
 	- LATER [[Diffusion-LM]]
